# agience-core

./: .copilotignore  .dockerignore  .env.example  .gitattributes  .gitignore  CLA.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE.md  README.md  ROADMAP.md  agience.bat  build_info.json  pytest.ini
.githooks/: pre-push
.github/workflows/: build-and-push-ghcr.yml  build-and-push.yml  ci.yml  cla.yml  cut-release.yml  deploy-suite.yml  hotfix-merge.yml  release.yml  renew-cert.yml  tag-stable.yml
.scripts/: _fix_sibling.ps1  check_docs_integrity.py  collect_usage_metrics.py  create_release_tag.py  distribution_preflight.py  generate_guide.py  generate_usage_snapshot.py  install-hooks.ps1  mcp_e2e_test.py  mcp_smoke_test.ps1  precheck.ps1  prepare_main_promotion.py  promote_main.ps1  publish_public.ps1  rename_to_mantle2.ps1  report_usage_snapshot.py  review_installation.py  rollback-stable.ps1  stamp_build_time.py  tag-stable.ps1  verify_license.py
backend/: README.md  main.py  manage_seed.py  requirements.txt
backend/agents/: __init__.py  complete_authorizer_oauth.py  transform_executor.py
backend/api/: mcp.py  platform.py  secrets.py
backend/core/: config.py  dependencies.py  embeddings.py  event_dispatcher.py  key_manager.py  logging_utils.py  name_generator.py  scopes.py  uvicorn_log_config.json
backend/db/: arango.py  opensearch.py
backend/entities/: api_key.py  artifact.py  collection.py  commit.py  commit_item.py  grant.py  server_credential.py
backend/mcp_client/: __init__.py  adapter.py  config_parser.py  contracts.py  local.py  security.py
backend/mcp_server/: __init__.py  server.py
backend/routers/: agents_router.py  api_keys_router.py  artifacts_router.py  auth_router.py  events_router.py  gate_router.py  grants_router.py  mcp_router.py  otp_router.py  passkey_router.py  platform_router.py  relay_router.py  secrets_router.py  server_credentials_router.py  setup_router.py  types_router.py
backend/scripts/: collect_usage_metrics.py  distribution_preflight.py  verify_license.py
backend/search/: init_search.py  query_builder.py  query_parser.py
docker/: Dockerfile.init  backend.Dockerfile  docker-compose.override.yml  docker-compose.servers.yml  docker-compose.yml  frontend-runtime-config.sh  frontend.Dockerfile  init.py
docs/: README.md  changelog.md  contributing.md
frontend/: COLOR_SCHEME.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
package/: README.md
package/hosts/desktop/: README.md  config.example.json  pyproject.toml
package/hosts/desktop/agience_relay_host/: __init__.py  config.py  host_service.py  local_policy.py  relay_client.py  relay_protocol.py  relay_runtime.py  runtime_modes.py  source_host_app.py
package/hosts/desktop/tests/: test_config.py  test_relay_runtime_mcp_request.py
package/hosts/docker/: Dockerfile.template  README.md  connection_api.py  example_main.py  pyproject.toml  requirements.txt
servers/aria/: Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
servers/aria/.well-known/: mcp.json
servers/aria/ui/application/vnd.agience.chat+json/: type.json  view.html
servers/aria/ui/application/vnd.agience.view+json/: view.html
servers/sage/: azure_search.py  pyproject.toml  server.py
servers/sage/.well-known/: mcp.json
servers/sage/tests/: test_startup.py
servers/sage/ui/application/vnd.agience.research+json/: type.json  view.html
servers/sage/ui/application/vnd.agience.resource+json/: type.json  view.html
servers/seraph/: pyproject.toml  requirements.txt  server.py
servers/seraph/.well-known/: mcp.json
servers/seraph/ui/application/vnd.agience.agency+json/: type.json
servers/seraph/ui/application/vnd.agience.agent+json/: type.json
servers/seraph/ui/application/vnd.agience.api-key+json/: type.json
servers/seraph/ui/application/vnd.agience.authority+json/: type.json  view.html
servers/seraph/ui/application/vnd.agience.authorizer+json/: type.json  view.html
servers/seraph/ui/application/vnd.agience.key+json/: view.html
servers/seraph/ui/application/vnd.agience.person+json/: type.json
servers/seraph/ui/application/vnd.agience.server-credential+json/: type.json
servers/seraph/ui/application/vnd.agience.signature+json/: view.html
src/chorus/astra/: README.md  docker-compose.yml  pyproject.toml  server.py  stream_routes.py
src/chorus/astra/stream/: entrypoint.sh
src/chorus/astra/ui/application/vnd.agience.stream+json/: schema.json  type.json  view.html
src/chorus/iris/: Dockerfile  pyproject.toml  server.py
src/chorus/iris/ui/application/vnd.agience.host+json/: view.html
src/chorus/iris/ui/application/vnd.agience.mcp-client+json/: type.json  view.html
src/chorus/iris/ui/application/vnd.agience.mcp-server+json/: schema.json  type.json  view.html
src/chorus/ophan/: Dockerfile  licensing.py  pyproject.toml  requirements.txt  server.py
src/chorus/ophan/scripts/: distribution_preflight.py  verify_license.py
src/chorus/ophan/tests/: test_licensing_service.py  test_licensing_tools.py
src/chorus/ophan/ui/application/vnd.agience.account+json/: type.json  view.html
src/chorus/ophan/ui/application/vnd.agience.entitlement+json/: type.json  view.html
src/chorus/ophan/ui/application/vnd.agience.invoice+json/: type.json
src/chorus/ophan/ui/application/vnd.agience.license+json/: type.json  view.html
src/chorus/ophan/ui/application/vnd.agience.license-installation+json/: type.json
src/chorus/ophan/ui/application/vnd.agience.market+json/: frontend.json
src/chorus/ophan/ui/application/vnd.agience.market-bars+json/: type.json
src/chorus/ophan/ui/application/vnd.agience.market-news+json/: type.json
src/chorus/ophan/ui/application/vnd.agience.market-series+json/: type.json
src/chorus/ophan/ui/application/vnd.agience.market-snapshot+json/: type.json
src/chorus/ophan/ui/application/vnd.agience.portfolio+json/: frontend.json  type.json  view.html
src/chorus/ophan/ui/billing/: billing-settings.html
types/: README.md
(+1075 files in other folders)
