[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agience-server-astra"
version = "0.1.0"
license = "AGPL-3.0-only"
description = "Agience Astra — MCP server for ingestion, connectors, normalization, and indexing"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27",
    "requests",
    "amazon-transcribe",
    "pypdf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[project.scripts]
agience-server-astra = "server:mcp"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
per-file-ignores = {"server.py" = ["E402"], "tests/test_startup.py" = ["E402"]}

[tool.pytest.ini_options]
asyncio_mode = "auto"
